Fix min-height #get-in-touch section in get-in-touch.html for 912px screens so that no <main> background-color: lightgrey is visible under contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,7 +369,7 @@ main {
 }
 
 #get-in-touch {
-    height: 600px;
+    min-height: 650px;
     width: 100%;
     background: url("../images/get-in-touch.webp") no-repeat center center/cover;
     position: relative;
